--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,11 @@
   "author": "mansour | cynthia | isaac",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.5"
   },
