--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.3",
     "mysql2": "^3.11.3",
+    "react-icons": "^5.4.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
