--- a/SSR/package.json
+++ b/SSR/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "ssr",
+  "name": "backendcafeteria",
   "version": "1.0.0",
+  "description": "backend de la cafeteria",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "mansour | cynthia | isaac",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "mysql2": "^3.12.0",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "multer": "1.4.3",
+    "mysql2": "^3.11.3",
+    "react-icons": "^5.4.0",
     "sequelize": "^6.37.5"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
