--- a/SSR/package.json
+++ b/SSR/package.json
@@ -12,9 +12,10 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "method-override": "^3.0.0",
     "multer": "1.4.3",
     "mysql2": "^3.11.3",
     "react-icons": "^5.4.0",
