--- a/API_RESTFULL/docker-compose.yml
+++ b/API_RESTFULL/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.3'
 services:
   db:
     # image: postgres
@@ -23,7 +22,7 @@ services:
     networks:
       - app-network
   api:
-    image: TheCafeteria_api
+    image: thecafeteria_api
     build: ./backend
     env_file:
       - ./backend/.env
@@ -39,7 +38,7 @@ services:
     # command: ["./wait-for-it.sh", "db:3306", "--timeout=0", "--", "./docker-entrypoint.sh"]
     #command: ["./wait-for-it.sh", "db:5432", "--timeout=0", "--", "./docker-entrypoint.sh"]
   app:
-    image: TheCafeteria_app
+    image: thecafeteria_app
     tty: true
     build: ./frontend
     env_file:
