--- a/API_RESTFULL/backend/package.json
+++ b/API_RESTFULL/backend/package.json
@@ -4,13 +4,7 @@
   "description": "backend de la cafeteria",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "db:makemigrations": "node ./node_modules/sequelize-auto-migrations/bin/makemigration.js",
-    "db:reset": "npx sequelize-cli db:drop && npx sequelize db:create && npm run db:migrate-and-seed",
-    "db:migrate-and-seed": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
-    "db:reset-and-start": "npm run db:reset && npm start",
-    "db:migrate-and-start": "npx sequelize-cli db:migrate && npm start",
-    "start": "node ./server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mansour | cynthia | isaac",
   "license": "ISC",
@@ -25,8 +19,7 @@
     "multer": "1.4.3",
     "mysql2": "^3.11.3",
     "react-icons": "^5.4.0",
-    "sequelize": "^6.37.5",
-    "sequelize-auto-migrations": "github:scimonster/sequelize-auto-migrations#a063aa6535a3f580623581bf866cef2d609531ba"
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
