--- a/API_RESTFULL/docker-compose.yml
+++ b/API_RESTFULL/docker-compose.yml
@@ -3,16 +3,16 @@ services:
     # image: postgres
     image: mysql
     # restart: always
-    env_file:
-      - ./backend/.env
-    # environment:
-    #   - MYSQL_DATABASE=${MYSQL_DATABASE}
+    #env_file:
+    #  - ./backend/.env
+    environment:
+       - MYSQL_DATABASE=${MYSQL_DATABASE}
     #   # So you don't have to use root, but you can if you like
-    #   - MYSQL_USER=${MYSQL_USER}
+    #  - MYSQL_USER=${MYSQL_USER}
     #   # You can use whatever password you like
-    #   - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     #   # Password for root access
-    #   - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     ports:
       - 8080:5173
       # - 5432:5432
@@ -26,10 +26,10 @@ services:
     build: ./backend
     env_file:
       - ./backend/.env
-    ports: 
-      - '8080:8080'
+    ports:
+      - "8081:8080"
     expose:
-      - '8080'
+      - "8080"
     # stdin_open: true
     networks:
       - app-network
@@ -43,10 +43,10 @@ services:
     build: ./frontend
     env_file:
       - ./frontend/.env
-    ports: 
-      - '5713:5713'
+    ports:
+      - "5713:5713"
     expose:
-      - '5713'
+      - "5713"
     stdin_open: true
     networks:
       - app-network
