--- a/API_RESTFULL/frontend/.env
+++ b/API_RESTFULL/frontend/.env
@@ -1,6 +1,7 @@
 JWT_SECRET=1234
 
-MYSQL_DATABASE=db_coffeshop
+MYSQL_DATABASE=db_coffeshop 
+REACT_APP_SERVER_URL=ws://localhost:8080
 # MYSQL_USER=root
 MYSQL_PASSWORD=1234
 MYSQL_ROOT_PASSWORD=1234
