--- a/API_RESTFULL/docker-compose.yml
+++ b/API_RESTFULL/docker-compose.yml
@@ -1,60 +1,33 @@
 services:
-  db:
-    # image: postgres
-    image: mysql
-    # restart: always
-    #env_file:
-    #  - ./backend/.env
-    environment:
-       - MYSQL_DATABASE=${MYSQL_DATABASE}
-    #   # So you don't have to use root, but you can if you like
-    #  - MYSQL_USER=${MYSQL_USER}
-    #   # You can use whatever password you like
-       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-    #   # Password for root access
-       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+  mysql:
+    image: mysql:8
+    env_file:
+     - ./backend/.env
     ports:
       - 3306:3306
-      # - 5432:5432
     volumes:
-      - my-db:/var/lib/mysql
-      # - my-db:/var/lib/postgresql/data
+      - mysql_data:/var/lib/mysql
     networks:
-      - app-network
-  api:
-    image: thecafeteria_api
+      - backend
+  
+  backend:
     build: ./backend
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mysql
+    networks:
+      - backend
+    environment:
+      DB_HOST: mysql,
+      DB_PORT: 3306,
+      DB_USER: root,
+      DB_PASSWORD: ${MYSQL_ROOT_PASSWORD_DEV},
+      DB_NAME: ${MYSQL_DATABASE_DEV},
+      NODE_ENV: development
     env_file:
       - ./backend/.env
-    ports:
-      - "8081:8080"
-    expose:
-      - "8080"
-    # stdin_open: true
-    networks:
-      - app-network
-    depends_on:
-      - db
-    # command: ["./wait-for-it.sh", "db:3306", "--timeout=0", "--", "./docker-entrypoint.sh"]
-    #command: ["./wait-for-it.sh", "db:5432", "--timeout=0", "--", "./docker-entrypoint.sh"]
-  # app:
-  #   image: thecafeteria_app
-  #   tty: true
-  #   build: ./frontend
-  #   env_file:
-  #     - ./frontend/.env
-  #   ports:
-  #     - "5713:5713"
-  #   expose:
-  #     - "5713"
-  #   stdin_open: tru
-  #   networks:
-  #     - app-network
-  #   depends_on:
-  #     - api
-volumes:
-  my-db:
-    driver: local
-networks:
-  app-network:
-    driver: bridge
+  volumes:
+      mysql_data: 
+  networks:
+      backend:
