--- a/API_RESTFULL/frontend/.env
+++ b/API_RESTFULL/frontend/.env
@@ -1,11 +1,3 @@
-JWT_SECRET=1234
+VITE_SERVER_URL=ws://localhost:8080
 
-MYSQL_DATABASE=db_coffeshop 
-REACT_APP_SERVER_URL=ws://localhost:8080
-# MYSQL_USER=root
-MYSQL_PASSWORD=1234
-MYSQL_ROOT_PASSWORD=1234
-PORT=8080
-DB_HOST=localhost
-NODE_END=development
-SESSION_SECRET='Hot dogs'
+
