--- a/API_RESTFULL/frontend/package.json
+++ b/API_RESTFULL/frontend/package.json
@@ -18,6 +18,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
