--- a/API_RESTFULL/docker-compose.yml
+++ b/API_RESTFULL/docker-compose.yml
@@ -2,14 +2,14 @@ services:
   mysql:
     image: mysql:8
     env_file:
-     - ./backend/.env
+      - ./backend/.env
     ports:
-      - 3306:3306
+      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
       - backend
-  
+
   backend:
     build: ./backend
     ports:
@@ -19,15 +19,31 @@ services:
     networks:
       - backend
     environment:
-      DB_HOST: mysql,
-      DB_PORT: 3306,
-      DB_USER: root,
-      DB_PASSWORD: ${MYSQL_ROOT_PASSWORD_DEV},
-      DB_NAME: ${MYSQL_DATABASE_DEV},
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_USER: root
+      DB_PASSWORD: 1234
+      DB_NAME: root
       NODE_ENV: development
     env_file:
       - ./backend/.env
-  volumes:
-      mysql_data: 
-  networks:
-      backend:
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "5173:5173" 
+    depends_on:
+      - backend
+    networks:
+      - backend
+    volumes:
+      - ./frontend:/usr/src/app
+      - /usr/src/app/node_modules
+    stdin_open: true
+
+volumes:
+  mysql_data:
+
+
+networks:
+  backend:
