--- a/SSR/package.json
+++ b/SSR/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "multer": "1.4.3",
